<resources>
    <string name="app_name">AdAid</string>

    <!-- String representation of action types -->
    <!-- Keep in sync with ActionType -->
    <string name="action_swipe_left">Swipe left</string>
    <string name="action_swipe_right">Swipe right</string>
    <string name="action_swipe_up">Swipe up</string>
    <string name="action_swipe_down">Swipe down</string>
    <string name="action_click">Click</string>
    <string name="action_mute">Mute</string>
    <string name="action_block">Block</string>
    <string name="action_back">Back</string>

    <!-- Strings used for activity rule -->
    <string name="rule_edit_activity_title">Edit rule</string>
    <string name="rule_new_activity_title">Create new rule</string>
    <string name="rule_name">Name</string>
    <string name="rule_name_error">Please enter a name</string>
    <string name="rule_enabled">Enabled</string>
    <string name="rule_app">Application</string>
    <string name="rule_app_error">Please select an application</string>
    <string name="rule_view_id">View id</string>
    <string name="rule_view_id_note">The id of the view that should trigger the rule. Finding this is non trivial. Use the help mechanism (? icon, top right) to find it.</string>
    <string name="rule_view_id_error">Please enter a view id</string>
    <string name="rule_view_text_note">What text should be inside the given view (or its children) to trigger the rule. Supports regex. Leave empty to trigger rule regardless of text.</string>
    <string name="rule_view_text">Text to search inside view</string>
    <string name="rule_action_type">Action</string>
    <string-array name="rule_action_type_list">
        <!-- Keep in sync with ActionType -->
        <item>@string/action_swipe_left</item>
        <item>@string/action_swipe_right</item>
        <item>@string/action_swipe_up</item>
        <item>@string/action_swipe_down</item>
        <item>@string/action_click</item>
        <item>@string/action_mute</item>
        <item>@string/action_block</item>
        <item>@string/action_back</item>
    </string-array>
    <string name="rule_action_type_note">Actions that can be triggered: Swipe (left/right/up/down) - Swipe in the given direction across the screen, Click - Click the view that matches the view id, Mute - Mute audio for as long as the matching view is visible, Block - Overlay a black bar over view, Back - Navigate back.</string>
    <string name="rule_action_type_error">Please select an action type</string>
    <string name="rule_relative_path_note">Optional relative path to a view on which should be acted on. Encoding is as follows: p - one parent up, c[n] - to nth child (0 indexed), su - up a sibling, sd - down a sibling. These can be chained if written separated by a dot like: p.p.su.c[2]. Leave empty to act on the triggering view itself.</string>
    <string name="rule_relative_path">Relative path</string>
    <string name="rule_button_save">Save changes</string>
    <string name="rule_button_delete">Delete rule</string>
    <string name="rule_db_error">Database error %s. Please try again.</string>
    <string name="rule_action_bar_help">Help finding values</string>
    <string name="rule_fab_description">Add a rule</string>
    <string name="rule_empty_view_text">Empty … no rules configured so far.</string>

    <!-- Strings for rule helper activity -->
    <string name="rule_helper_activity_title">Rule helper</string>
    <string name="rule_helper_package_label">Snapshot was made for the app</string>
    <string name="rule_helper_package_icon_description">App icon</string>
    <string name="rule_helper_row_text_label">Text</string>
    <string name="rule_helper_row_id_label">Id</string>
    <string name="rule_helper_value_not_set">-- no id --</string>
    <string name="rule_helper_cancel_message">Wrong usage sequence, helper mechanism was canceled. Please try again.</string>
    <string name="rule_helper_reuse_error_message">Could not reuse previous snapshot. Please try again.</string>

    <!-- Strings used for rule helper dialog -->
    <string name="rule_helper_dialog_message">Finding the correct rule values is non trivial. You can activate a helper mechanism to help you find the <b>application name</b>, the <b>view id</b> and the <b>view text</b> for the rule. After activation, navigate to the app you want to find the values for and wait for the relevant view to become visible. As soon as it is visible, click the notification of this app to create a snapshot of the current view hierarchy. You\'ll automatically return back here where you can select for what element you want to create a rule.</string>
    <string name="rule_helper_dialog_positive">Activate</string>
    <string name="rule_helper_dialog_negative">Cancel</string>
    <string name="rule_helper_dialog_neutral">Use previous snapshot</string>
    <string name="rule_helper_dialog_service_not_enabled">Please enable the accessibility service of this app first.</string>

    <!-- Strings used for rule helper notification -->
    <string name="rule_helper_notification_permission_deny_message">Permission for notifications have been denied. Aborting the helper.</string>
    <string name="rule_helper_notification_channel_name">General</string>
    <string name="rule_helper_notification_title">Helping you find the rule values</string>
    <string name="rule_helper_notification_text">When the view you want to find the values for is visible, tap this notification to take a snapshot and return to the rule creation.</string>

    <!-- Strings used for a11y service -->
    <string name="a11y_service_label">AdAid Service</string>
    <string name="a11y_service_description">An adblocker that utilizes accessibility service functionalities to react to ads in other apps.</string>
    <string name="a11y_service_not_enabled_message">The accessibility service of this app is disabled. Please enable it in the settings.</string>
    <string name="a11y_service_not_enabled_action">Open settings</string>

    <!-- Strings used for settings -->
    <string name="settings_snapshot_tile_label">Snapshot</string>
    <string name="no_rules_configured">No rules configured.</string>
</resources>