<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rule_name"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchInputEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:checked="true"
            android:text="@string/rule_enabled"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownAppContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rule_app"
            android:labelFor="@+id/dropdownApp">

            <AutoCompleteTextView
                android:id="@+id/dropdownApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rule_view_id_note" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputViewIdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rule_view_id" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rule_view_text_note" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rule_view_text"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rule_action_type_note" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownActionTypeContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rule_action_type"
            android:labelFor="@+id/dropdownActionType">

            <AutoCompleteTextView
                android:id="@+id/dropdownActionType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/rule_action_type"
                android:inputType="none"
                tools:ignore="TextContrastCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rule_relative_path_note" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputRelativePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rule_relative_path" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Container for buttons. -->
        <!-- Allows for a button width of "wrap_content" without also wrapping the text views. -->
        <LinearLayout
            android:id="@+id/eighty_percent_layout_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/buttonSave"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/rule_button_save"
                android:text="@string/rule_button_save" />

            <Button
                android:id="@+id/buttonDelete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/rule_button_delete"
                android:text="@string/rule_button_delete"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
